lena's changes, crossingfingerrrrs

--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -73,7 +73,8 @@
 <!-- -------------------------------- Toggle button –––––––––––––––––––––––––––––––––––––-->
 <div id="tool-bar-container">
     <div class="toggle_menu">
-        <a href="#0"  data-toggle="tooltip" data-placement="right" title="Index of book"><i class="fa fa-book"></i></a>    </div>
+        <a href="#0"  data-toggle="tooltip" data-placement="right" title="Index of book"><i class="fa fa-chevron-right"></i>
+        </a>    </div>
 </div>
  
    
@@ -85,7 +86,7 @@
     <nav id="menu" class="pushmenu pushmenu-left not col-lg-2 col-md-2 col-sm-2 col-xs-12 ">
         <div id="toc_wrapper">
             <div id="button_to_close_menu_on_small_devices"></div>
-
+        Index<br>
                 <a class="page-scroll" href="#chapter1"><h2>The Gray Zones of Creativity and Capital: Introduction<div class="horizScroll"></div><br>
                 <span class="toc_author">Gordana Nikolić, Šefik Tatlić</span>
                 </h2></a>
@@ -151,7 +152,7 @@
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
-                                Cite your selection with the following conventions:
+                                Select text and cite it with the following conventions:
                             <p title="Modern Language Association" alt="Modern Language Association">MLA</p>
                             <button data-clipboard-target="#mla" class="full-citation" id="mla"></button>
                             <p>Chicago Manual of Style</p>
@@ -310,7 +311,7 @@
             </ol>
         </div>
         <!-- LIBRARY NAV -->
-        <div id="library-nav">
+<!--         <div id="library-nav">
             <nav>
                 <ul class="pager">
                     <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Older</a></li>
@@ -318,37 +319,37 @@
                 </ul>
             </nav>
         </div>
-
+         -->
         <!-- BOOK TITLE -->
         <div class="row">
-            <div id="book-title" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                The Gray Zones<br>of Creativity<br>and Capital
+            <div id="book-title" class="col-lg-12 col-lg-offset-1 col-md-12 col-sm-12 col-xs-12">
+                The Gray Zones of<br>Creativity and Capital
             </div>
         </div>
 
         <!-- SUMMARY BOX -->
         <div class="row">    
             <div class="row" style="margin-top:30px;">
-                <div class="col-lg-3 col-md-2 col-sm-2 col-xs-12" style="padding-left:70px; background-color:white;"><span style="font-size:20px;">Author(s)</span><br>
-                    Johnatan Beller, Josephine Berry Slater, Marc James Léger, Ana Vilenica, Sandi Abram, Irmgard Emmelheinz
+                <div class="col-lg-3 col-lg-offset-1 col-md-2 col-sm-2 col-xs-12"><span style="font-size:20px;">Author(s)</span><br>
+                    <a href="#">Johnatan Beller</a>, <a href="#">Josephine Berry Slater</a>, <a href="#">Marc James Léger</a>, <a href="#">Ana Vilenica</a>, <a href="#">Sandi Abram</a>, <a href="#">Irmgard Emmelheinz</a>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="background-color:white;">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                     <span style="font-size:20px;">Editor(s)</span><br>
-                    Gordana Nikolić, Šefik Tatlić
+                    <a href="#">Gordana Nikolić</a>, <a href="#">Šefik Tatlić</a>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="background-color:white;">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                     <span style="font-size:20px;">Series</span><br>
-                    Theory on Demand
+                    <a href="#">Theory on Demand</a>
                 </div> 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="background-color:white;"><span style="font-size:20px;">Date of writing</span><br>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12"><span style="font-size:20px;">Date of writing</span><br>
                     03/12/2015
                 </div>                        
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="background-color:white;"><span style="font-size:20px;">Date of publishing</span><br>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12"><span style="font-size:20px;">Date of publishing</span><br>
                     03/12/2015
                 </div>    
             </div>
             <div class="row" style="margin-top:20px;">
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" style="font-size:20px; padding-left:70px;">Summary<br>
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-sm-5 col-xs-12" style="font-size:20px;">Summary<br>
                     What is the correlation among the creative industries, creative industry policies, new media paradigms and capitalism as colonial relations of dominance? What is the role of these industries in the prioritization of the interests of capital at the expense of those of society and how can these paradigms be criticized in the context of the actual, neoliberal, flexible regime of reproduction of capital? To what measure is this regime ‘flexible’ and to what measure it is just an extension of rigid, feudal and racial logics that underline (post)modern representational discourses? To what measure do the concepts of creativity, transparency, openness and flexibility conceal the hegemonic nature of modern hierarchies of exploitation?<br>
                     This publication brings together six essays that offer a critique of the relationship between the creative industries and capital. It treats ‘the networked world’ — its democracies, cognitivities, its attention and its paradigmatic cultural discourses — as one of the domains wherein and by which capitalism and its colonial relations of dominance are being reproduced, reorganized, perpetuated and ‘modernized’.
                 </div>  
@@ -412,15 +413,16 @@
 <div class="section" id="chapter1" data-authorName="Gordana" data-authorLastName="Nikolić" data-article="Introduction">
         <h2>The Gray Zones of Creativity and Capital:<span class="shadow"></span>Introduction</h2>
                 <span class="author">Šefik Tatlić & Gordana Nikolić</span><span class="words"> | 1.666 words</span>
+    <br><br>
                 <button type="button" class="btn btn-default" id="keyword_toggle0">Capitalism</button>                 
                 <button type="button" class="btn btn-default" id="keyword_toggle1">Capital</button>
                 <button type="button" class="btn btn-default" id="keyword_toggle2">Creativity</button>
                 <button type="button" class="btn btn-default" id="keyword_toggle3">Art</button>
                 <button type="button" class="btn btn-default" id="keyword_toggle4">Contemporary</button>
                 <button type="button" class="btn btn-default" id="keyword_toggle5">Culture</button>
-                <button type="button" class="btn btn-default" id="keyword_toggle6">Ideological</button>
+    <button type="button" class="btn btn-default" id="keyword_toggle6">Ideological</button><br><br>
                                           
-        <p>The initial <a href="#0" class="button" data-toggle="popover"  data-content="test" data-trigger="focus" data-placement="top">idea</a> that led to the preparation of this publication was not a reflection of the editors’ wish to merely add another publication focusing on a critique of the relationship between creative industries and capital to the huge corpus of similar publications taking a critical stance towards the process of co-optation of creativity, creative industries, art or the domain of abstraction in general by capital. Even though, precisely through the logic of the mass production of critical texts dealing with the above-mentioned context, this publication as well will ultimately exist in such a register, the distinctive feature of this publication is its aspiration to place the relationship between creativity and capital in the context of an analysis wherein capitalism is treated as the framework of a broader relationship of domination, which to a great degree goes beyond the currently popular critical niche focused on analyzing the relationship between creativity, abstraction or representation in general and capital.</p>
+        <p>The initial idea that led to the preparation of this publication was not a reflection of the editors’ wish to merely add another publication focusing on a critique of the relationship between creative industries and capital to the huge corpus of similar publications taking a critical stance towards the process of co-optation of creativity, creative industries, art or the domain of abstraction in general by capital. Even though, precisely through the logic of the mass production of critical texts dealing with the above-mentioned context, this publication as well will ultimately exist in such a register, the distinctive feature of this publication is its aspiration to place the relationship between creativity and capital in the context of an analysis wherein capitalism is treated as the framework of a broader relationship of domination, which to a great degree goes beyond the currently popular critical niche focused on analyzing the relationship between creativity, abstraction or representation in general and capital.</p>
                 <p>The vast majority of such publications are characterized by such a perception of the relationship between creativity and capital, which implies that the co-optation and exploitation of work, creativity and attention occurs in a post-class, post-ideological or post-colonial context of the so-called ‘networked world or networked democracy’, wherein all subjects and their actions are reportedly subjected to the logic of capital in the same way. Regardless of whether we speak of the ideological  use of the concept of creativity in the name of rationalization of the neoliberal strategies of transforming the city into ghettoized class and racial apartheids, whether we speak of the exploitation of attention (the economy of attention) by financial capital or generally about the epistemological positioning of creativity, abstraction or the domain of representation within the dominant form of rationalization and reproduction of capitalism, this publication strives to retain a critical view that sees these processes as forms of the perpetuation of the hegemony of capitalism in the so-called contemporary era.</p>
                 <p>As regards the temporal framework encompassed in this publication, although certain texts, through the logic of the necessity of historicization of specific strategies and practices refer to historical periods preceding the 21<sup>st</sup> century, the majority of the texts contained in this publication refer to social and political processes from the end of the 20<sup>th</sup> and the beginning of the 21<sup>st</sup> century, that is, the current period. In this sense, the dominant ideological  discourses, strategies and power relations of today constitute the focus of attention of the topics of this publication.</p>
                 <p>This publication, then, occupies a position that treats ‘the networked world’, its democracies, cognitivities, attention and culture  as domains wherein, or with help of which, forms of the reproduction of capitalism as a heterogeneous form of hegemony, primarily of the First World of capital or the West, are reorganized, ‘modernized’. The title ‘The Gray Zones of Creativity and Capital’ does not, therefore, point primarily to instances of vagueness and dichotomy in the analysis of the social meaning of the cooperation between creativity and capital, but assumes a critical stance towards ‘gray areas’ in those dominant interpretations of capitalism that try to view it as a post-ideological, post-class or post-bloc system.</p>
