--- a/webdesign/ongoing prototype/lambdaJosip.html
+++ b/webdesign/ongoing prototype/lambdaJosip.html
@@ -27,20 +27,22 @@
 <!--––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 ––––––––––––––––––––––––––– SCRIPTS ––––––––––––––––––––––––––––––––––––––––
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->
-    <script src="http://code.jquery.com/jquery-1.7.2.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+     <!-- // <script src="http://code.jquery.com/jquery-1.7.2.js"></script> -->
+    <!-- // <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    // <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+    <!-- // <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    // <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="lambda.js"></script>
 
 <!--––––––––––––––––––––––– PLUGINS –––––––––––––––––––––––––––––––––––––--> 
-    <script src="final_js/highlight.js"></script>
+    // <!-- <script src="final_js/highlight.js"></script> -->
     <script src="final_js/moment.js"></script>
     <script src="final_js/clipboard.min.js"></script>
     <script src="final_js/jquery.hotkeys.js"></script>
+    <script src="final_js/jquery.wrapSelection.js"></script>
     <!--<script src="final_js/jquery.sidenotes.js"></script>-->
     <!--<script src="final_js/md-sidenotes.js"></script>-->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
