--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -328,12 +328,12 @@
          -->
         <!-- BOOK TITLE -->
         <div class="row">
-<<<<<<< Updated upstream
+<!-- <<<<<<< Updated upstream -->
             <div id="book-title" class="col-lg-12 col-lg-offset-1 col-md-12 col-sm-12 col-xs-12">
                 The Gray Zones of<br>Creativity and Capital
-=======
+<!-- =======
             <div id="book-title" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                The Gray Zones<br>of Creativity<br>and Capital
+                The Gray Zones<br>of Creativity<br>and Capital -->
 <!-- ======= -->
 <!-- –––––––––––––––––––––––––– Information box (top) –––––––––––––––––––––––––––––––––––––-->
 <!-- <div id="info-box" class="toppy" > -->
@@ -373,7 +373,7 @@
             <span style="font-size:20px;">Editor(s)</span><br>
             Gordana Nikolić, Šefik Tatlić -->
 <!-- >>>>>>> Stashed changes -->
->>>>>>> Stashed changes
+<!-- >>>>>>> Stashed changes -->
             </div>
         </div>
 
