--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -429,12 +429,12 @@
 
 
 
-            <div class="container"id="asd" style="display: none; width: 100px; heigth: 800px; position: fixed; background-color: white; margin: 0; padding: 0; -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));
-        filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));">
+            <div class="container"id="asd" style="display: none; width: 100px; heigth: 800px; position: fixed;  margin: 0; padding: 0; -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
+        filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3)); z-index:9999999999999999999;">
                 <div class="btn-group-vertical">
-                    <button type="button" class="btn btn-primary">LOOK UP WORD</button>
-                    <button type="button" class="btn btn-primary">HIGHLIGHT</button>
-                    <button type="button" class="btn btn-primary">CITE</button>
+                    <button type="button" class="btn btn-primary">Look up word</button>
+                    <button type="button" class="btn btn-primary">Highlight</button>
+                    <button type="button" class="btn btn-primary">Cite</button>
                 </div>
             </div>
 
