--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -1624,8 +1624,8 @@ TRANSFORMED INTO SIDENOTES
 /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-
 /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
 
-<footer class="footer" >
-    <div class="container col-lg-5 col-lg-offset-2 col-md-5 col-sm-8 col-sm-offset-2 col-xs-12">
+<footer class="footer  col-lg-5 col-lg-offset-2 col-md-5 col-sm-8 col-sm-offset-2 col-xs-12" >
+    <div class="container">
         <p>Design and development: Josip Batinic and Léna Robin. </p>
     </div>
 </footer>
