--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -302,7 +302,7 @@
 </div> 
 
 
-    
+
 <!-- –––––––––––––––––––––––––– Vertical scrolling indicator –––––––––––––––––––––––––––––––––––––-->
 <div id="menu_bar">
     <div id="menu_bar_scroll"></div>
@@ -394,7 +394,10 @@ This publication brings together six essays that offer a critique of the relatio
 
 <div class="container-fluid">
     <div class="row">
-        <div id="content" class="col-lg-5 col-lg-offset-2 col-md-5 col-sm-8 col-sm-offset-2 col-xs-12">
+
+        <div id="par_numbr" class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="height: 10000px; background-color: yellow"></div>
+
+        <div id="content" class="col-lg-5 col-lg-offset-1 col-md-5 col-sm-8 col-sm-offset-1 col-xs-12">
 
 
             <div class="container"id="asd" style="display: none; width: 100px; heigth: 800px; position: fixed;  margin: 0; padding: 0; -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
