fixed paragraph-related bug

--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -218,8 +218,8 @@
                     </div>
                     <div id="collapse6" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <button id="button_fontsizeminus" value="smaller" onclick="changeFontSize(this)"><i class="fa fa-font"></i>-</button>
-                            <button id="button_fontsizeplus" value="larger" onclick="changeFontSize(this)"><i class="fa fa-font"></i>+</button>
+                            <button id="button_fontsizeminus"><i class="fa fa-font"></i>-</button>
+                            <button id="button_fontsizeplus"><i class="fa fa-font"></i>+</button>
                             <hr>
                             <span class="keyword-show-all">Show all keywords <i class="fa fa-tags"></i></span>
                             <button id="button_changefont"></button>
@@ -395,7 +395,7 @@ This publication brings together six essays that offer a critique of the relatio
 <div class="container-fluid">
     <div class="row">
 
-        <div id="par_numbr" class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="height: 10000px; background-color: yellow"></div>
+        <div id="par_numbr" class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 
         <div id="content" class="col-lg-5 col-lg-offset-1 col-md-5 col-sm-8 col-sm-offset-1 col-xs-12">
 
