--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -300,6 +300,10 @@
                 </div>
             </div>
 
+
+            <div id="pin"><i class="fa fa-thumb-tack fa-2x"></i></div>
+
+
         </div>
     </div>
 </div>
@@ -444,14 +448,14 @@
 
             <div class="container on-selection" id="asd">
                 <div class="btn-group-vertical">
-                    <button type="button" class="btn btn-primary"><i class="fa fa-book"></i>
+                    <button id="lookup" type="button" class="btn btn-primary"><i class="fa fa-book"></i>
                         Definition</button>
                     <div class="btn-group-horizontal">
-                        <button type="button" id="poiu" class="btn btn-primary"><i class="fa fa-pencil"></i>
+                        <button type="button" id="highlight" class="btn btn-primary"><i class="fa fa-pencil"></i>
                          Highlight</button>
-                        <button type="button" id="erase" style="display: none" class="btn btn-primary"><i class="fa fa-eraser"></i> Erase highlight</button>
+                        <button type="button" id="erase" class="btn btn-primary"><i class="fa fa-eraser"></i> Unhighlight</button>
                     </div>
-                    <button type="button" class="btn btn-primary"><i class="fa fa-quote-left"></i>
+                    <button type="button" id="get-reference" class="btn btn-primary"><i class="fa fa-quote-left"></i>
                          Quote</button>
                 </div>
             </div>
