--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -1722,6 +1722,7 @@ TRANSFORMED INTO SIDENOTES
 <script> 
     $(document).ready(function(){
         $("#flip").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel").slideToggle("fast");
             $("#panel2").hide();
             $("#panel3").hide();
@@ -1730,6 +1731,7 @@ TRANSFORMED INTO SIDENOTES
             $("#panel6").hide();
         });
         $("#flip2").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel2").slideToggle("fast");
             $("#panel").hide();
             $("#panel3").hide();
@@ -1738,6 +1740,7 @@ TRANSFORMED INTO SIDENOTES
             $("#panel6").hide();
         });        
         $("#flip3").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel3").slideToggle("fast");
             $("#panel").hide();
             $("#panel2").hide();
@@ -1746,6 +1749,7 @@ TRANSFORMED INTO SIDENOTES
             $("#panel6").hide();
         });        
         $("#flip4").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel4").slideToggle("fast");
             $("#panel").hide();
             $("#panel2").hide();
@@ -1754,6 +1758,7 @@ TRANSFORMED INTO SIDENOTES
             $("#panel6").hide();
         });        
         $("#flip5").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel5").slideToggle("fast");
             $("#panel").hide();
             $("#panel2").hide();
@@ -1762,6 +1767,7 @@ TRANSFORMED INTO SIDENOTES
             $("#panel6").hide();
         });        
         $("#flip6").click(function(){
+            $(this).toggleClass('panel-open');
             $("#panel6").slideToggle("fast");
             $("#panel").hide();
             $("#panel2").hide();
