button centered yahoo

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -76,7 +76,7 @@
 <!-- –––––––––––––––––––––––––– Pushmenu/Toc (left) –––––––––––––––––––––––––––––––––––––-->
 <div class="container-fluid">
     <div class="row">
-        <nav id="menu" class="not col-lg-2 col-md-2 col-sm-2 col-xs-0 ">
+        <div id="menu" class="not col-lg-2 col-md-2 col-sm-2 col-xs-0 ">
             <div id="toc_wrapper">
                 <p class="menu-publication-title" style="font-size:18px; margin-left:10px;">The Gray Zones of Creativity and Capital</p>
                 <a class="page-scroll" href="#chapter1">
@@ -150,7 +150,7 @@
                     </a>
                 </div>
 
-        </nav>
+        </div>
         <!-- <div id="button_to_close_menu_on_small_devices"></div> -->
     </div>
 </div>
