--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -50,6 +50,7 @@
     <script src="final_js/velocity.ui.min.js"></script>
     <script src="final_js/jquery.wrapSelection.js"></script>
     <script src="final_js/jquery-cookie-master/src/jquery.cookie.js"></script>
+    <script src="final_js/jquery.rotate.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
     
 </head>
